samples/_failures_safe/1761493504_5249a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a0bd247e.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_a0bd247e.c:162:9: error: expected declaration or statement at end of input
  162 |         case TOKEN_NUMBER: return "NUMBER";
      |         ^~~~
./samples/SAFE/__tmp_a0bd247e.c:162:9: error: expected declaration or statement at end of input
